16-NetworkPolicies-EKS/netpol/allow-app-to-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-to-redis
  namespace: giropops
spec:
  podSelector:
    matchLabels: # ou liberar comunicação de todas as app da namepsace para o Redis com "{}", sem a linha abaixo.
      app: giropops-senhas # libera a comunicação do redis
  policyTypes: 
  - Engress # comunicação de entrada
  Engress:
  - to: 
    - podSelector:
        matchLabels:
          app: redis
      namespaceSelector: # adiciona tb pra dar match com a namespace, senao pode ter uma app com o mesmo nome em outra ns que estará liberada. Lembrando que não tem "-" indicando operador lógico "and"
        matchLabels:
          kubernetes.io/metadata.name: giropops # na namespace especifica
