16-NetworkPolicies-EKS/netpol/allowDNS-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: giropops
spec:
  podSelector: # todos os pods da namespace giropops
    matchLabels: {}
  policyTypes:
  - Egress # terão uma regra de saida 
  egress:
  - to: # para 
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system # a namespace que possui o label kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns # e o pod possui a label kube-dns
    ports: # liberando a comunicação de saida na porta 53 UDP
    - protocol: UDP 
      port: 53
